<resources>
    <string name="app_name" translatable="false">ChipDefense: Copper</string>
    <string name="app_description">Chip Defense is a casual game for Android devices of the tower defense genre. It centres around a design of electric circuits and logical chips, evoking the good ol\' days of 8 bit micro-processors.</string>
    <string name="button_resume">Resume game</string>
    <string name="coins_got">%1$d / %2$d coin</string>
    <string name="coins_got_plural">%1$d / %2$d coins</string>
    <string name="button_reset_progress">Reset game progress</string>
    <string name="buttton_replay">Reset stage</string>
    <string name="button_return_to_main_menu">Return to main menu</string>
    <string name="continue_game">Continue playing</string>
    <string name="game_paused">GAME PAUSED</string>
    <string name="scoreboard_status">lives</string>
    <string name="scoreboard_coins">coins</string>
    <string name="scoreboard_inf">inf</string>
    <string name="scoreboard_stage">stage</string>
    <string name="scoreboard_waves">wave</string>
    <string name="scoreboard_temp">temp</string>
    <string name="quit">Quit</string>
    <string name="app_name_last" translatable="false">Defense</string>
    <string name="button_nextlevel">Play next stage</string>
    <string name="button_start_game">Start new game</string>
    <string name="button_playlevel">Play stage</string>
    <string name="failed">Failed to clear stage.</string>
    <string name="success">All stages cleared!</string>
    <string name="cleared">Stage cleared.</string>
    <string name="last_stage">Last stage was: %s</string>
    <string name="win">You win.</string>
    <string name="next_stage">Next stage: %s</string>
    <string name="coins_gathered">Coins gathered: %d.</string>
    <string name="game_start">Starting game.</string>
    <string name="enter_game">Enter</string>
    <string name="selectLevel">Select Level</string>
    <string name="play_selected_level">Play selected level</string>
    <string name="button_marketplace">Heroes</string>
    <string name="button_refund_all">Reset all</string>
    <string name="button_refund_one">Downgrade Hero</string>
    <string name="button_purchase">Upgrade Hero [1 coin] </string>
    <string name="button_purchase_plural">Upgrade Hero [%d coins]</string>
    <string name="cost_desc">[cost: %d]</string>
    <string name="level_entry">Level %s</string>
    <string name="level_selector">Level Selector</string>
    <string name="query_reset">Do you want to reset all heroes?</string>
    <string name="query_restart_game">Do you want to reset all your current progress?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="choice_1">Yes, start a fresh game from the beginning.</string>
    <string name="choice_2">Only reset the “endless” levels.</string>
    <string name="choice_3">No, keep my progress.</string>
    <string name="close">Close</string>
    <string name="instr_1">
"Your computer is being invaded by an evil virus. Rogue code fragments - shown as Ones and Zeroes - try to get through to the cpu.

Tap on the empty slot to add a chip as defense against the attack, and then tap again to confirm your choice.

The most basic chip is “SUB 1” which subtracts 1 from the attacker´s value. It turns 1´s into 0´s, and it makes 0´s disappear. Only then they are no longer a threat."
    </string>
    <string name="instr_2">
"You may also tap on an attacker. This will invert its value: 1 becomes 0, and 0 becomes 1.

Inverting a 0 will actually make the attacker more dangerous, so be careful not to tap on everything you see."
    </string>
    <string name="instr_3">
"The currency in this game is information. It is displayed on the bottom left.

Destroy the attacking code to gain some information about the virus. Use it to buy additional chips or to upgrade the existing ones."
    </string>
    <string name="instr_4">
"Here are some hints:

Remember that in binary,
  10 equals 2,
  11 equals 3,
100 equals 4,
and so on.

Try to tap on numbers starting with “1”. This reduces the attacker´s number and makes the level much easier.

Any attacker that gets through to the CPU will cost one life, regardless of its number. You must have at least one SUB chip to get rid of them."</string>
    <string name="instr_5">
"In the next level, a new chip type is available. It is labelled “SHR 1”, which means “shift right by 1”.

All digits are moved one position to the right. The leftmost digit is replaced by 0.

For example, 0110 becomes 0011. This is equivalent to dividing the value by 2."
    </string>
    <string name="instr_6">
"By clearing stages, you can gain cryptocoins. These coins are valuable. You can use them to hire some powerful Heroes of the Information Age who will give you significant advantages in the game.

There is a maximum amount of cryptocoins per level shown on the bottom, and each life lost will reduce the reward.

If you do not get all the coins, you can always replay the level. However, once you have obtained the maximum, you won´t receive any more coins for this stage.
"
    </string>
    <string name="instr_7">
"Sometimes you will see a cryptocoin moving along with the attackers. You can collect it by destroying it, even multiple times when you replay the level.

But be careful. The moving cryptocoin is stronger than ordinary attackers, and if it reaches the CPU, it will take one of your lives."
    </string>
    <string name="instr_7a">Chips need to cool down between operations. Hire heroes to reduce the chance of grouped attackers overwhelming a chip.\n\nIf you are stuck, you can replay a lower level trying to catch a running cryptocoin.</string>
    <string name="instr_8">"\nYou can sell existing chips and re-use their slot. Most, but not all of the information will be refunded.\n\nNote that an activated chip will complete its current cooldown cycle before disappearing."</string>
    <string name="instr_9">"\nLet´s introduce another chip. The MEM (for memory) chip takes a number and stores it safely away in memory. A little white indicator shows that there is a value inside.\n\nThe MEM chip must be “read out” (by tapping on it). Once you have tapped on the chip, its cool down cycle starts, and only after that the memory slot becomes available again. A thick white frame indicates whether you should tap on the chip.\n\nFor now, the MEM chip can hold only one attacker,. Later in the game you will be able to buy upgrades, creating additional slots.\n\nMEM chips are powerful because they can take out any attacker, but they require your attention, and they are quite slow."</string>
    <string name="instr_10">
"The accumulator chip (ACC) is a bit more complex than the others, but it can be very effective against large numbers of attackers. It takes two numbers and combines them into one result.

In its basic variant, it adds the two numbers. If you upgrade the chip once, it will OR the input numbers. Upgrading twice makes the operation an AND.

Example: If the numbers 0110 (that is 6) and 0011 (that is 3) enter the ACC chip, the result will be
1001 (that is 9) when adding [ACC +]
0111 (that is 7) using OR [ACC v]
0010 (that is 2) using AND [ACC &amp;].

The advantage of ACC is that it is really fast."
    </string>
    <string name="instr_11">
"Larger numbers are represented in hexadecimal. They are shown with a leading “x”.

In hex, you have digits from 0 to 9 and then from A to F. The hex number x0F equals 15, or 1111 in binary."
    </string>
    <string name="instr_12">
"Two more chip types: ADD and SHL.\n\nThese do the opposite of SUB and SHR, respectively: They add 1 to the number and shift the bits to the left.\n\nOf course, this is really undesired. You can “upgrade” these chips to reduce their strength or make them disappear."
    </string>
    <string name="instr_13">
"Note that cryptocoins are unaffected by ACC and also by MEM chips."
    </string>
    <string name="instr_14">Another chip becomes available! \n\nThe CLK (clock) chip does not affect the attackers itself. Instead, it speeds up the other chips on the board. Each time the CLK ticks, the cooldown timer of all other chips is reset, and they become ready to operate anew.\n\nUpgrading increases the CLK frequency.</string>
    <string name="instr_15">Overclocking the CPU can be dangerous: The faster your chips work, the hotter they will get.\n\nEach time your clock resets a chip, a small amount of heat is produced. Temperatures of more than %d degrees can damage the CPU, that means, that they can cost you one life.</string>
    <string name="instr_16">The NOP chip (No operation) does nothing. But since it occupies a slot, you might want to remove it.\n\nA NOP 2 chip also does nothing, but twice.</string>
    <string name="instr_17">Two more undesired chip types, then we have seen them all.\n\nDUP duplicates an attacking piece of code. Instead of one attacker, you\'ll have two, with the same number.\n\nSPLT (split) does nearly the same, but instead of simply duplicating the number, it splits it into two pieces. For example, xA4 becomes xA0 and x04. This is somewhat the opposite of ACC: If the two resulting numbers are combined by logical OR, you\'ll get the original values. </string>
    <string name="instr_18">Beware! Sneak attack!</string>
    <string name="instr_22">Remember that SHR chips are powerful but cannot eliminate attackers. They quickly reduce large values, but against hordes of weak attackers, multiple SUB chips may be a more cost-effective defence.</string>
    <string name="instr_23">Not all electronic components are logic chips. There are also important classic, analogue components such as capacitors [C] or resistors [R]. \n\nIn this game, resistors have the effect of slowing down the attackers for a certain period of time. Their strength is indicated by three coloured rings. The slowing effect is the bigger the stronger the attackers are. One-bit-numbers are hardly affected at all, whereas 8-bit numbers become quite slow by large resistances.\n\nResistors generate heat. There is a hero (Claude Shannon) who can convert some of this heat into information.</string>
    <string name="instr_endless">You have successfully cleared all stages and won the game!\n\nIf you want, you can continue in “endless” mode, with randomly generated circuits that get more and more difficult. You will start the “endless” series without heroes, and you cannot use the coins gathered until now. \n\nHow far will you get?</string>
    <string name="settings_title">Settings</string>
    <string name="name_series_1">Normal</string>
    <string name="name_series_2">Turbo</string>
    <string name="name_series_3">Endless</string>
    <string name="settings_disable_background">Disable background</string>
    <string name="settings_show_atts_in_range">Show attackers in range</string>
    <string name="settings_use_large_buttons">Use large objects</string>
    <string name="settings_show_framerate">Show frame rate</string>
    <string name="button_info">Info</string>
    <string name="settings_keep_levels">Keep created stages in “endless” mode</string>
    <string name="settings_use_hex">Display stage numbers in hex</string>
    <string name="import_data">Import Data</string>
    <string name="export_data">Export Data</string>
    <string name="game_progress">Game Progress</string>
    <string name="go_back">Go back</string>
    <string name="settings_activate_log">Enable debug logging</string>
    <string name="query_purchase_life">Do you want to spend %s to recover a life?</string>
    <string name="annotation_purchase_life">This dialog can be disabled in “Settings”. You will still be able to purchase lives by tapping on the CPU.</string>
    <string name="settings_disable_purchase_dialog">Disable the life purchase dialog</string>
</resources>