<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.rama.chipdefense_copper.AnimatedPatternView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/root"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            style="@style/Title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_disable_purchase_dialog"
                    android:text="@string/settings_disable_purchase_dialog"
                    android:onClick="savePrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.RetroSwitch" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_disable_background"
                    android:text="@string/settings_disable_background"
                    android:onClick="savePrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.RetroSwitch" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_show_atts_in_range"
                    android:text="@string/settings_show_atts_in_range"
                    android:onClick="savePrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.RetroSwitch" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_use_large_buttons"
                    android:text="@string/settings_use_large_buttons"
                    android:onClick="savePrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.RetroSwitch" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_show_framerate"
                    android:text="@string/settings_show_framerate"
                    android:onClick="savePrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.RetroSwitch" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_keep_levels"
                    android:text="@string/settings_keep_levels"
                    android:onClick="savePrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.RetroSwitch" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_use_hex"
                    android:text="@string/settings_use_hex"
                    android:onClick="savePrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.RetroSwitch" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_activate_log"
                    android:text="@string/settings_activate_log"
                    android:onClick="savePrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    style="@style/Widget.CpuDefense.RetroSwitch" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/game_progress"
                    style="@style/Title" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/importData"
                    android:text="@string/import_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.Button.Danger" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exportData"
                    android:text="@string/export_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.Button.Danger" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startNewGameButton"
                    android:onClick="startNewGame"
                    android:text="@string/button_reset_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.Button.Danger" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_back"
                    android:onClick="dismiss"
                    android:text="@string/go_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CpuDefense.Button" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>