<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:id="@+id/inner_layout"
    android:background="@color/background_secondary_color"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/query_purchase_life"
        style="@style/Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAnnotation"
        android:text="@string/annotation_purchase_life"
        style="@style/Content" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_yes"
        android:text="@string/yes"
        style="@style/Widget.CpuDefense.Button" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_no"
        android:text="@string/no"
        style="@style/Widget.CpuDefense.Button.Danger" />

</LinearLayout>
