<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resumeGame"
            android:text="@string/button_resume"
            style="@style/Widget.CpuDefense.Button.Title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectLevelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectLevel"
            android:onClick="startLevelSelection"
            style="@style/Widget.CpuDefense.Button.Title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startNewGameButton"
            android:onClick="displayAboutDialog"
            android:text="@string/button_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.CpuDefense.Button.Title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            android:onClick="displaySettingsDialog"
            android:text="@string/settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.CpuDefense.Button.Title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quitButton"
            android:onClick="exitActivity"
            android:text="@string/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.CpuDefense.Button.Title" />

    </LinearLayout>
</LinearLayout>

