<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title -->
    <TextView
        android:id="@+id/levelSelectorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_selector"
        android:textColor="@color/text_white"
        android:textSize="24sp" />

    <!-- Tabs -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:tabSelectedTextColor="@color/text_white"
        app:tabTextColor="@color/text_green">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_series_1" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_series_2" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_series_3" />
    </com.google.android.material.tabs.TabLayout>

    <!-- Scrollable level list -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="top"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/levelList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <!-- Play button -->
    <FrameLayout
        android:id="@+id/playLevelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:background="#444"
        android:clickable="true"
        android:focusable="true"
        android:onClick="startGame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_selected_level"
            android:textColor="@color/white" />
    </FrameLayout>

    <!-- Back button -->
    <FrameLayout
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="#366CB1"
        android:clickable="true"
        android:focusable="true"
        android:onClick="dismiss">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:textColor="@color/white" />
    </FrameLayout>

</LinearLayout>
