<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/background_secondary_color"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_quit"
        style="@style/Title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_return_to_main_menu"
        style="@style/Widget.CpuDefense.Button.Danger" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_replay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttton_replay"
        style="@style/Widget.CpuDefense.Button.Danger" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        android:text="@string/continue_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.CpuDefense.Button" />
</LinearLayout>